# who-dances-what

./: .gitignore  .golangci.yml  README.md  buildspec.yml  go.mod  go.sum
.devcontainer/: Dockerfile  Dockerfile.devtools  Dockerfile.ortools  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-push-images.yaml  build-test.yaml  delete-ecr-repository.yaml  dependabot-auto-merge.yml  docker-build-and-push.yaml
api/: common.yaml  types.cfg.yaml
api/hello/: api.yaml
api/secret-hello/: api.yaml
cmd/hello/: api.go  main.go  oapi.gen.go
cmd/secret-hello/: api.go  main.go  oapi.gen.go
cmd/who-dances-what/: dance-set.go  list-active-dancers.go  list-dances.go  main.go
cppsolver/: CMakeLists.txt
cppsolver/cmake/: FindCheck.cmake
cppsolver/src/: dance_solver.cpp  logger.cpp  structs.cpp
cppsolver/src/include/: dance_solver.h  dance_solver.hpp
cppsolver/src/include/dance-solver/: enums.h  logger.h  logger.hpp
cppsolver/tests/: CMakeLists.txt  dance_solver_c_api_tests.c  dance_solver_tests.cpp  testlogger.c  testlogger.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/routes/: root.jsx
internal/lambda/: lambda.go
internal/loggerbinding/: README.md  binding.go
internal/model/: logruslogger.go  model.go
internal/solver/: binding.go  binding_test.go  solver.go  solver_test.go
